# MiniChat_fastapi

./: README.md  pyproject.toml
app/: main.py
app/api/v1/: router_page.py  router_socket.py
app/static/: index.js
app/templates/: index.html
