[project]
name = "minichat-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Tarapunka",email = "dan.forth.ant@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "websockets (>=16.0,<17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
